[gd_scene load_steps=14 format=3 uid="uid://bvxg5xnknue6h"]

[ext_resource type="Script" path="res://levels/Scenes/day_phase.gd" id="1_87mw8"]
[ext_resource type="PackedScene" uid="uid://4xrk0xcxfw6e" path="res://components/playerBullet/player_bullet.tscn" id="2_frl4x"]
[ext_resource type="PackedScene" uid="uid://duqednbeuh318" path="res://components/Collectables/collectables.tscn" id="3_esct8"]
[ext_resource type="PackedScene" uid="uid://c4gytpc0vkd2a" path="res://levels/grass_level/grass_level.tscn" id="4_8xk23"]
[ext_resource type="PackedScene" uid="uid://ctcrca36054ed" path="res://entities/player/player.tscn" id="5_nm84h"]
[ext_resource type="PackedScene" uid="uid://ddo8sc41fi3mj" path="res://hud/hud.tscn" id="6_6kt5d"]
[ext_resource type="PackedScene" uid="uid://md5w04hdljf1" path="res://PauseMenu/pause_menu.tscn" id="7_ayx3m"]
[ext_resource type="TileSet" uid="uid://cxm638ny72a02" path="res://levels/tilesets/grass_tileset.tres" id="8_0hffb"]
[ext_resource type="PackedScene" uid="uid://detkeh16h32fb" path="res://entities/ship/ship.tscn" id="9_uv6ki"]
[ext_resource type="PackedScene" uid="uid://dijpoceqauarg" path="res://entities/base_monster/base_monster.tscn" id="10_8844s"]
[ext_resource type="PackedScene" uid="uid://s5q3ymqj5dkb" path="res://entities/base_monster/reeb.tscn" id="11_gg31y"]
[ext_resource type="PackedScene" uid="uid://bql2ao0kvjwyb" path="res://resources/terminal/terminal.tscn" id="12_ohxex"]
[ext_resource type="PackedScene" uid="uid://dc4cw5hq15s2h" path="res://resources/base_resource/base_resource.tscn" id="13_0fvsd"]

[node name="DayPhase" type="Node2D"]
modulate = Color(0.868985, 0.868985, 0.868985, 1)
script = ExtResource("1_87mw8")
playerBullet = ExtResource("2_frl4x")
collectable = ExtResource("3_esct8")
dayLength = 60

[node name="grass_level" parent="." node_paths=PackedStringArray("roof_layer") instance=ExtResource("4_8xk23")]
roof_layer = NodePath("../RoofLayer")

[node name="player" parent="." node_paths=PackedStringArray("main_scn", "ship_scn") instance=ExtResource("5_nm84h")]
main_scn = NodePath("..")
ship_scn = NodePath("../Ship")

[node name="Camera2D" type="Camera2D" parent="player"]
zoom = Vector2(2.5, 2.5)

[node name="hud" parent="player/Camera2D" instance=ExtResource("6_6kt5d")]

[node name="PauseCanvasLayer" type="CanvasLayer" parent="player/Camera2D"]

[node name="PauseMenu" parent="player/Camera2D/PauseCanvasLayer" instance=ExtResource("7_ayx3m")]

[node name="RoofLayer" type="TileMapLayer" parent="."]
tile_set = ExtResource("8_0hffb")

[node name="Ship" parent="." node_paths=PackedStringArray("player") instance=ExtResource("9_uv6ki")]
position = Vector2(118, -112)
player = NodePath("../player")

[node name="BaseMonster" parent="." node_paths=PackedStringArray("player") instance=ExtResource("10_8844s")]
position = Vector2(-128, 378)
player = NodePath("../player")

[node name="Reeb" parent="." node_paths=PackedStringArray("player") instance=ExtResource("11_gg31y")]
position = Vector2(-24, -223)
player = NodePath("../player")

[node name="Terminal" parent="." instance=ExtResource("12_ohxex")]
position = Vector2(-243, -139)

[node name="DayTimer" type="Timer" parent="."]

[node name="BaseResource" parent="." instance=ExtResource("13_0fvsd")]
visible = false

[connection signal="ending_day" from="." to="player" method="_on_day_phase_ending_day"]
[connection signal="consDuration" from="player" to="player/Camera2D/hud" method="_on_player_cons_duration"]
[connection signal="consumCount" from="player" to="player/Camera2D/hud" method="_on_player_consum_count"]
[connection signal="gathered" from="player" to="player/Camera2D/hud" method="_on_player_gathered"]
[connection signal="gathered" from="player" to="player/Camera2D/PauseCanvasLayer/PauseMenu" method="_on_player_gathered"]
[connection signal="health_changed" from="player" to="player/Camera2D/hud" method="_on_player_health_changed"]
[connection signal="hpPackCount" from="player" to="player/Camera2D/hud" method="_on_player_hp_pack_count"]
[connection signal="on_chunk_changed" from="player" to="grass_level" method="_on_player_on_chunk_changed"]
[connection signal="on_harvester_count_changed" from="player" to="player/Camera2D/hud" method="_on_player_on_harvester_count_changed"]
[connection signal="on_harvester_max_changed" from="player" to="player/Camera2D/hud" method="_on_player_on_harvester_max_changed"]
[connection signal="stamina_changed" from="player" to="player/Camera2D/hud" method="_on_player_stamina_changed"]
[connection signal="toggleConsum" from="player" to="player/Camera2D/hud" method="_on_player_toggle_consum"]
[connection signal="EndingTheDay" from="player/Camera2D/PauseCanvasLayer/PauseMenu" to="." method="_on_pause_menu_ending_the_day"]
[connection signal="timeout" from="DayTimer" to="." method="_on_day_timer_timeout"]
